--- a/style/style.css
+++ b/style/style.css
@@ -17,15 +17,21 @@
 #mainWrapper{
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
 }
 #mainWrapper #topProcess{
-    max-width: 300px;
+    max-width: 400px;
     min-height: 250px;
     border-radius: 5px;
+    margin: 10px;
+    padding: 25px;
     background-color: rgba(255, 255, 255, .3);
 }
 #cpuUsageCanvasWrapper{
     max-width: 300px;
     max-height: 250px;
+    margin: 10px;
+    border-radius: 5px;
     background-color: rgba(255, 255, 255, .3);
 }
