Cambiamos a estilo más minimalista y usamos un mismo gráfico principal

--- a/style/style.css
+++ b/style/style.css
@@ -1,42 +1,56 @@
+:root{
+    --lightColorBackground: #f0f0f5;
+    --borderColor: #e6e6e6;
+    --lightFontColor: #999999;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
-.background{
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    z-index: -10000;
+body{
+    background-color: #ffffff;
+}
+h5{
+    color: var(--lightFontColor);
+    font-weight: 700;
 }
 #headerWrapper {
-    max-width: 960px;
     margin: 0 auto;
     height: 60px;
+    border-bottom: 3px solid var(--borderColor);
 }
 #mainWrapper{
-    max-width: 1200px;
+    max-width: 1960px;
     margin: 0 auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
 }
-#mainWrapper #topProcess{
-    max-width: 400px;
-    min-height: 250px;
-    border-radius: 5px;
-    margin: 10px;
-    padding: 25px;
-    background-color: rgba(255, 255, 255, .3);
+#mainWrapper > * {
+    flex: 1 100%;
 }
+#mainWrapper #asideWrapper{
+    flex: 1;
+    display: flex;
+    flex-flow: row wrap;
+    height: 100vh;
+    padding: 25px;
+    background-color: var(--lightColorBackground);
+    border-left: 3px solid var(--borderColor);
+    border-right: 3px solid var(--borderColor);
+}
+#mainWrapper #asideWrapper > * {
+    flex: 1 100%;
+}
+
 .usageCanvasWrapper{
     position: relative;
-    height: 30vh;
-    width: 40vw;
-    margin: 10px;
-    padding: 15px 10px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255, .3);
+
+}
+#memoryUsageCanvasWrapper{
+    max-height: 40vh;
 }
 #listTopProcess{
     list-style-type: none;
@@ -49,8 +63,14 @@
     margin-left: -15px;
     margin-right: 10px;
 }
-#memoryUsageCanvasWrapper {
-    max-width: 300px;
-    height: auto;
-    padding: 15px;
+#mainInfoWrapper{
+    flex: 2;
+    display: flex;
+    flex-flow: row wrap;
+}
+#mainInfoWrapper > * {
+    flex: 1 100%;
+}
+#mainInfoWrapper #usageCanvasWrapper{
+    max-height: 40vh;
 }
